--- a/app/src/main/res/layout/tab1.xml
+++ b/app/src/main/res/layout/tab1.xml
@@ -1,15 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:background="#EEEEEE"
+    tools:context="com.anz.org.fxtradepnlapp.CurrenciesTab">
 
-    <TextView
-        android:id="@+id/textView"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Currencies"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="13dp"
+        android:layout_toRightOf="@+id/avatar"
+        android:orientation="horizontal">
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/btnPrevDate"
+            android:layout_width="30px"
+            android:layout_height="30px"
+            android:background="@drawable/previous_icon"/>
+
+        <TextView
+            android:id="@+id/dateValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:textSize="13dp"
+            android:textColor="#000000" />
+
+        <Button
+            android:id="@+id/btnNextDate"
+            android:layout_width="30px"
+            android:layout_height="30px"
+            android:background="@drawable/next_icon"/>
+
+    </LinearLayout>
+
+    <ExpandableListView
+        android:id="@+id/lvExp"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_margin="8dp"
+        android:groupIndicator="@drawable/expander_group" />
+
+</LinearLayout>
