--- a/app/src/main/res/drawable/expander_group.xml
+++ b/app/src/main/res/drawable/expander_group.xml
@@ -17,7 +17,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_expanded="true"
-        android:drawable="@drawable/expander_ic_maximized" />
+        android:drawable="@drawable/expander_ic_maximized"
+
+        />
     <item
         android:drawable="@drawable/expander_ic_minimized" />
 </selector>
