--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -18,6 +18,7 @@
         />
 
     <TextView
+        android:fontFamily="sans-serif-thin"
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,6 +32,7 @@
         android:layout_toEndOf="@+id/icon" />
 
     <TextView android:id="@+id/subTitle"
+        android:fontFamily="sans-serif-thin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Line 2"
