--- a/app/src/main/res/layout/tab1.xml
+++ b/app/src/main/res/layout/tab1.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="#EEEEEE"
+    android:background="@drawable/shapegrad"
     tools:context="com.anz.org.fxtradepnlapp.CurrenciesTab">
 
     <LinearLayout
@@ -16,25 +16,19 @@
         android:layout_toRightOf="@+id/avatar"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btnPrevDate"
-            android:layout_width="30px"
-            android:layout_height="30px"
-            android:background="@drawable/previous_icon"/>
-
         <TextView
             android:id="@+id/dateValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
-            android:textSize="13dp"
+            android:textSize="15dp"
             android:textColor="#000000" />
 
         <Button
-            android:id="@+id/btnNextDate"
-            android:layout_width="30px"
-            android:layout_height="30px"
-            android:background="@drawable/next_icon"/>
+            android:id="@+id/serviceBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
 
     </LinearLayout>
 
