--- a/app/src/main/res/layout/tab3.xml
+++ b/app/src/main/res/layout/tab3.xml
@@ -1,16 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:background="#EEEEEE"
+    tools:context="com.anz.org.fxtradepnlapp.QuotesTab">
 
-    <TextView
-        android:id="@+id/textView"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Quotes"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="13dp"
+        android:layout_toRightOf="@+id/avatar"
+        android:orientation="horizontal">
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/btnPrevDateQ"
+            android:layout_width="30px"
+            android:layout_height="30px"
+            android:background="@drawable/previous_icon"/>
+
+        <TextView
+            android:id="@+id/dateValueQ"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:textSize="15dp"
+            android:textColor="#000000" />
+
+        <Button
+            android:id="@+id/btnNextDateQ"
+            android:layout_width="30px"
+            android:layout_height="30px"
+            android:background="@drawable/next_icon"/>
+
+    </LinearLayout>
+
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id = "@+id/RHE1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:stretchColumns="1,2,3,4,5"
+        android:padding="2dp">
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="10px"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/lblListSymbol"
+                android:textSize="17dp"
+                android:gravity="center"
+                android:fontFamily="sans-serif"
+                android:textColor="#000000"
+                android:text="Symbol"/>
+
+            <TextView
+                android:layout_width="0px"
+                android:layout_height="match_parent" />
+
+            <TextView android:layout_column="1"
+                android:id="@+id/lblListBid"
+                android:textSize="17dp"
+                android:fontFamily="sans-serif"
+                android:textColor="#000000"
+                android:gravity="center"
+                android:text="Bid"/>
+
+            <TextView android:layout_column="2"
+                android:id="@+id/lblListAsk"
+                android:textSize="17dp"
+                android:fontFamily="sans-serif"
+                android:textColor="#000000"
+                android:gravity="center"
+                android:text="Ask"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/imgBaseCCYFlag"
+                android:layout_height="40px"
+                android:layout_width="45px"
+                android:layout_margin="5dp" />
+
+            <TextView
+                android:id="@+id/txtListSymbol"
+                android:textSize="12dp"
+                android:gravity="center"
+                android:fontFamily="sans-serif"
+                android:textColor="#000000"
+                />
+
+            <ImageView
+                android:id="@+id/imgQuoteCCYFlag"
+                android:layout_height="40px"
+                android:layout_width="45px"
+                android:layout_margin="5dp" />
+
+            <TextView android:layout_column="1"
+                android:id="@+id/txtListBid"
+                android:textSize="12dp"
+                android:fontFamily="sans-serif"
+                android:textColor="#000000"
+                android:gravity="center"
+                />
+
+            <TextView android:layout_column="2"
+                android:id="@+id/txtListAsk"
+                android:textSize="12dp"
+                android:fontFamily="sans-serif"
+                android:textColor="#000000"
+                android:gravity="center"
+                />
+        </TableRow>
+    </TableLayout>
+
+</LinearLayout>
+
 
