--- a/app/src/main/res/layout/quoteslist_item.xml
+++ b/app/src/main/res/layout/quoteslist_item.xml
@@ -1,50 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:background="#EEEEEE"
-    tools:context="com.anz.org.fxtradepnlapp.QuotesTab">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:padding="8dp"
+    android:background="@drawable/shapechild" >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="13dp"
-        android:layout_toRightOf="@+id/avatar"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnPrevDateQ"
-            android:layout_width="30px"
-            android:layout_height="30px"
-            android:background="@drawable/previous_icon"/>
-
-        <TextView
-            android:id="@+id/dateValueQ"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:textSize="15dp"
-            android:textColor="#000000" />
-
-        <Button
-            android:id="@+id/btnNextDateQ"
-            android:layout_width="30px"
-            android:layout_height="30px"
-            android:background="@drawable/next_icon"/>
-
-    </LinearLayout>
-
-    <ListView
-        android:id="@+id/quotesListView"
-        android:layout_height="fill_parent"
-        android:layout_width="fill_parent"
-        android:layout_margin="8dp"/>
-
-   <!-- <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id = "@+id/RHE1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -131,8 +93,6 @@
                 android:gravity="center"
                 />
         </TableRow>
-    </TableLayout>-->
+    </TableLayout>
 
 </LinearLayout>
-
-
