--- a/app/src/main/res/layout/tab2.xml
+++ b/app/src/main/res/layout/tab2.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="#EEEEEE"
+    android:background="@drawable/shapegrad"
     tools:context="com.anz.org.fxtradepnlapp.DealsTab">
 
     <LinearLayout
@@ -18,24 +18,33 @@
 
         <Button
             android:id="@+id/btnPrevDate"
-            android:layout_width="30px"
-            android:layout_height="30px"
+            android:layout_width="25px"
+            android:layout_height="25px"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/previous_icon"/>
 
         <TextView
             android:id="@+id/dateValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
+            android:layout_margin="2dp"
             android:textSize="15dp"
             android:textColor="#000000" />
 
         <Button
             android:id="@+id/btnNextDate"
-            android:layout_width="30px"
-            android:layout_height="30px"
+            android:layout_width="25px"
+            android:layout_height="25px"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/next_icon"/>
 
     </LinearLayout>
+
+    <ExpandableListView
+        android:id="@+id/lDealsExp"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_margin="8dp"
+        android:groupIndicator="@drawable/expander_group" />
 
 </LinearLayout>
