--- a/app/src/main/res/layout/dealslist_group.xml
+++ b/app/src/main/res/layout/dealslist_group.xml
@@ -5,18 +5,14 @@
     android:orientation="horizontal"
     android:padding="8dp"
     android:layout_margin="2dp"
-    android:background="@drawable/shape"
-    >
-
-
+    android:background="@drawable/shape">
 
         <ImageView
             android:gravity="center_vertical"
             android:id="@+id/imgBaseCCYFlag"
             android:layout_margin="5dp"
-            android:layout_height="40px"
-            android:layout_width="45px"
-/>
+            android:layout_height="28dp"
+            android:layout_width="33dp" />
 
         <TextView
             android:id="@+id/txtListSymbol"
@@ -33,8 +29,8 @@
             android:gravity="center_vertical"
             android:id="@+id/imgSecondCCYFlag"
             android:layout_margin="5dp"
-            android:layout_height="40px"
-            android:layout_width="45px"
+            android:layout_height="28dp"
+            android:layout_width="33dp"
 
             />
 
