--- a/app/src/main/res/layout/quoteslist_group.xml
+++ b/app/src/main/res/layout/quoteslist_group.xml
@@ -20,24 +20,27 @@
 
             <ImageView
                 android:id="@+id/imgBaseCCYFlag"
-                android:layout_height="40px"
-                android:layout_width="45px"
+                android:layout_height="28dp"
+                android:layout_width="33dp"
                 android:layout_margin="2dp" />
 
             <TextView
                 android:id="@+id/txtListSymbol"
                 android:textSize="17dp"
                 android:gravity="center"
+                android:layout_width="63dp"
                 android:layout_height="40dp"
                 android:fontFamily="sans-serif"
                 android:textColor="#000000"
+                android:textAlignment="center"
                 />
 
             <ImageView
                 android:id="@+id/imgQuoteCCYFlag"
-                android:layout_height="40px"
-                android:layout_width="45px"
-                android:layout_margin="2dp" />
+                android:layout_height="28dp"
+                android:layout_width="33dp"
+                android:layout_margin="1dp"
+                android:layout_gravity="center_vertical" />
 
             <TextView android:layout_column="1"
                 android:id="@+id/txtListBid"
