--- a/app/src/main/res/layout/tab3.xml
+++ b/app/src/main/res/layout/tab3.xml
@@ -92,7 +92,8 @@
         android:id="@+id/quotesListView"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp"
+        android:groupIndicator="@null"/>
 
 </LinearLayout>
 
