--- a/app/src/main/res/layout/quoteslist_group.xml
+++ b/app/src/main/res/layout/quoteslist_group.xml
@@ -9,45 +9,48 @@
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id = "@+id/RHE1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="3dp"
         android:stretchColumns="1,2,3,4,5"
-        android:padding="2dp">
+ >
 
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:gravity="left">
 
             <ImageView
                 android:id="@+id/imgBaseCCYFlag"
-                android:layout_height="28dp"
-                android:layout_width="33dp"
-                android:layout_margin="2dp" />
+                android:layout_height="30dp"
+                android:layout_width="34dp"
+                android:layout_gravity="center_vertical" />
 
             <TextView
                 android:id="@+id/txtListSymbol"
                 android:textSize="17dp"
-                android:gravity="center"
-                android:layout_width="63dp"
-                android:layout_height="40dp"
+                android:gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:fontFamily="sans-serif"
                 android:textColor="#000000"
                 android:textAlignment="center"
+                android:layout_margin="1dp"
                 />
 
             <ImageView
                 android:id="@+id/imgQuoteCCYFlag"
-                android:layout_height="28dp"
-                android:layout_width="33dp"
-                android:layout_margin="1dp"
+                android:layout_height="30dp"
+                android:layout_width="34dp"
                 android:layout_gravity="center_vertical" />
-
             <TextView android:layout_column="1"
                 android:id="@+id/txtListBid"
                 android:textSize="13dp"
+
                 android:fontFamily="sans-serif"
                 android:textColor="#000000"
                 android:gravity="center"
+                android:layout_width="wrap_content"
                 />
 
             <TextView android:layout_column="2"
