--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
             android:id="@+id/profileBox"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:background="@color/material_blue_grey_800"
+            android:background="@color/colorPrimary"
             android:padding="8dp" >
 
             <ImageView
@@ -79,7 +79,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-thin"
-                    android:text="FxPnLApp"
+                    android:text="FxBook"
                     android:textColor="#fff"
                     android:textSize="16sp"
                     android:textStyle="bold" />
