--- a/app/src/main/res/layout/currencylist_item.xml
+++ b/app/src/main/res/layout/currencylist_item.xml
@@ -104,10 +104,6 @@
                 android:textSize="17dp"
                 android:textColor="#000000"
                 />
-
-
-
-
         </TableRow>
         <TableRow
             android:layout_width="wrap_content"
@@ -118,7 +114,13 @@
                 android:id="@+id/currCCy"
             android:visibility="invisible"
                 />
-
+            <CheckBox
+                android:id="@+id/starCheck"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onStarredClick"
+                android:button="@android:drawable/btn_star"/>
             <Button
                 android:layout_column="4"
                 android:id="@+id/flattenBtn"
