--- a/app/src/main/res/layout/tab4.xml
+++ b/app/src/main/res/layout/tab4.xml
@@ -23,13 +23,14 @@
 
             <Spinner
 
-                android:id="@+id/spinner1"
+                android:id="@+id/spinner"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:background="@android:drawable/btn_dropdown"
-                android:spinnerMode="dropdown"
                 android:layout_gravity="left"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
 />
 
         </TableRow>
